@@ -1,3 +1,10 @@
+2007-11-01  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* tif_predict.c/h, tif_lzw.c, tif_zip.c: Improvements so that 
+	predictor based encoding and decoding works in read-write update
+	mode properly. 
+	http://trac.osgeo.org/gdal/ticket/1948
+
 2007-10-24  Joris Van Damme  <joris.at.lebbeke@skynet.be>
 
 	* tif_dirread.c: Fixed problem with bogus file triggering 
